# extended-bs4

./: README.md  pyproject.toml
extended_bs4/: __init__.py
tests/: test_extended_bs4.py
typings/bs4/: CHANGES  dammit.pyi  element.pyi  formatter.pyi
typings/bs4/builder/: _html5lib.pyi
